--- a/src/MyCourse/appsettings.Development.json
+++ b/src/MyCourse/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information"
     }
+  },
+  "Courses": {
+    "PerPage": 20
   }
 }
