--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -1,10 +1,24 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "Default": "Data Source=Data/MyCourse.db"
+  },
+  "Courses": {
+    "PerPage": 10,
+    "Order": {
+      "By": "Rating",
+      "Ascending": false,
+      "Allow": ["Title", "Rating", "CurrentPrice"]
+    }
+  },
+  "MemoryCache": {
+    "TimeSpan": 60,
+    "SizeLimit": 1000
+  }
 }
