Configurazione per DistributedCache e ResponseCache

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -9,6 +9,17 @@
   "ConnectionStrings": {
     "Default": "Data Source=Data/MyCourse.db"
   },
+  "DistributedCache": {
+    "Redis": {
+        "Configuration": "localhost",
+        "InstanceName": "MyCourseRedisCache"
+    },
+    "SqlServer": {
+        "ConnectionString": "Data Source=(localdb)\\MSSQLLocalDb;Integrated Security=True",
+        "SchemaName": "dbo",
+        "TableName": "MyCourseSqlCache"
+    }
+  },
   "Courses": {
     "PerPage": 10,
     "Order": {
@@ -20,5 +31,12 @@
   "MemoryCache": {
     "TimeSpan": 60,
     "SizeLimit": 1000
+  },
+  "ResponseCache": {
+    "Home": {
+      "Duration": 60,
+      "Location": "Client",
+      "VaryByQueryKeys": ["page"]
+    }
   }
 }
