Ricerca, paginazione e ordinamento

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -22,15 +22,15 @@
   },
   "Courses": {
     "PerPage": 10,
+    "InHome": 3,
     "Order": {
       "By": "Rating",
       "Ascending": false,
-      "Allow": ["Title", "Rating", "CurrentPrice"]
+      "Allow": ["Id", "Title", "Rating", "CurrentPrice"]
     }
   },
   "MemoryCache": {
-    "TimeSpan": 60,
-    "SizeLimit": 1000
+    "TimeSpan": 60
   },
   "ResponseCache": {
     "Home": {
