Dynamic Linq EfCoreCourseService

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -4,9 +4,36 @@
       "MaxRequestBodySize": 5242880
     }
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "Serilog": {
+    "Using":  [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": 
+      {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss}\t{Level:u3}\t{SourceContext}\t{Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 14,
+          "restrictedToMinimumLevel": "Information",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter, Serilog"
+        }
+      }
+    ],
+    "Properties": {
+      "Application": "MyCourse"
     }
   },
   "AllowedHosts": "*",
