Azure Computer Vision

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -51,5 +51,10 @@
     "Username": "5fcc3b2944b74f",
     "Password": "bf9e45174baefa",
     "Sender": "MyCourse <noreply@example.org>"
+  },
+  "ImageValidation": {
+    "Key": "Si consiglia di mettere la Key per il servizio Computer Vision su variabile d'ambiente",
+    "Endpoint": "Si consiglia di mettere l'Endpoint per il servizio Computer Vision su variabile d'ambiente",
+    "MaximumAdultScore":  0.6
   }
 }
