Autorizzazione(Authorize, AllowAnonymous, reCaptcha, form contatto docente, gestione ruoli, form gestione ruoli, policy)

--- a/src/MyCourse/MyCourse.csproj
+++ b/src/MyCourse/MyCourse.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AspNetCore.ReCaptcha" Version="1.2.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
     <PackageReference Include="HtmlSanitizer" Version="5.0.331" />
