--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -54,13 +54,21 @@
     "Host": "smtp.mailtrap.io",
     "Port": 25,
     "Security": "StartTls",
-    "Username": "5fcc3b2944b74f",
-    "Password": "bf9e45174baefa",
+    "Username": "2b0a706cf339e9",
+    "Password": "2da80d59258772",
     "Sender": "MyCourse <noreply@example.org>"
   },
   "ImageValidation": {
     "Key": "Si consiglia di mettere la Key per il servizio Computer Vision su variabile d'ambiente",
     "Endpoint": "Si consiglia di mettere l'Endpoint per il servizio Computer Vision su variabile d'ambiente",
-    "MaximumAdultScore":  0.6
+    "MaximumAdultScore": 0.6
+  },
+  "ReCaptcha": {
+    "SiteKey": "SiteKey fornita da Google su https://www.google.com/recaptcha/admin/create",
+    "SecretKey": "SecretKey fornita da Google su https://www.google.com/recaptcha/admin/create",
+    "Version": "v2"
+  },
+  "Users": {
+    "AssignAdministratorRoleOnRegistration":  "admin@example.com"
   }
 }
