Pannello gestione utenti visualizzabile solo per l'admin

--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -69,6 +69,7 @@
     "Version": "v2"
   },
   "Users": {
-    "AssignAdministratorRoleOnRegistration":  "admin@example.com"
+    "AssignAdministratorRoleOnRegistration": "admin@example.com",
+    "NotificationEmailRecipient":  "boss@example.com"
   }
 }
