--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -70,6 +70,12 @@
   },
   "Users": {
     "AssignAdministratorRoleOnRegistration": "admin@example.com",
-    "NotificationEmailRecipient":  "boss@example.com"
+    "NotificationEmailRecipient": "boss@example.com"
+  },
+  "Paypal": {
+    "ClientId": "ClientId fornito da Paypal su https://developer.paypal.com",
+    "ClientSecret": "ClientSecret fornito da Paypal su https://developer.paypal.com",
+    "IsSandbox": true,
+    "BrandName": "MyCourse"
   }
 }
