--- a/src/MyCourse/appsettings.json
+++ b/src/MyCourse/appsettings.json
@@ -75,8 +75,8 @@
     "Host": "smtp.mailtrap.io",
     "Port": 25,
     "Security": "StartTls",
-    "Username": "2b0a706cf339e9",
-    "Password": "2da80d59258772",
+    "Username": "Username del server SMTP",
+    "Password": "Password del server SMTP",
     "Sender": "MyCourse <noreply@example.org>"
   },
   "ImageValidation": {
